Revert "remove EnableJVMCI flag"
This reverts commit c4f083ccf01ad829ec4fcff832ea137562a49869.